--- a/examples/is_zero/Cargo.toml
+++ b/examples/is_zero/Cargo.toml
@@ -11,3 +11,6 @@ crate-type = ["dylib"]
 
 [dependencies.postgres_extension]
 path = "../../"
+
+[dependencies.postgres_macros]
+path = "../../postgres_macros"
