--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ authors = ["Daniel Fagnan <dnfagnan@gmail.com>"]
 [lib]
 name = "postgres_extension"
 crate-type = ["dylib"]
+
+[dependencies]
+libc = "*"
